<resources>
    <string name="app_name">Collect [IT]</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="lastname">Surname</string>
    <string name="firstname">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login2">Login</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_collection">View Collections</string>
    <string name="menu_item">Filter Collection</string>
    <string name="menu_create_collection">Create Collection</string>
    <string name="menu_create_tem">Create Item</string>
    <string name="menu_about_us_">About us</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_collection">Create Collection</string>
    <string name="create_item">Create Item</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us </string>
    <string name="other">Other</string>
    <string name="quick_access">Quick Access</string>
    <string name="quick_create">Quick Create</string>
    <string name="collect_it">Collect [IT]</string>
    <string name="select_category_required">Select Category (required)</string>
    <string name="item_name_required">Item Name (required)</string>
    <string name="item_description_optional">Item Description (optional)</string>
    <string name="collection_name_required">Collection Name (required)</string>
    <string name="collection_description_optional">Collection Description (optional)</string>
    <string name="goal_required">Goal (required)</string>
    <string name="date_of_aquisition_optional">Date Of Acquisition (optional)</string>
    <string name="category_required">Category (required)</string>
    <string name="date_of_acquisition_optional">Date of Acquisition</string>
    <string name="update">Update</string>
    <string name="collection_name">Collection Name</string>
    <string name="description">Description</string>
    <string name="goal">Goal</string>
    <string name="progress_graph">Progress Graph</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="view_progress">View Progress</string>
    <string name="select_a_category_below">Select a category below</string>
</resources>