<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="@string/quick_access">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_baseline_home_24"
                    android:title="@string/menu_home" />

                <item
                    android:id="@+id/nav_item"
                    android:icon="@drawable/ic_baseline_filter_alt_24"
                    android:title="@string/menu_item" />

            </group>

        </menu>
    </item>

    <item android:title="@string/quick_create">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_create_collection"
                    android:icon="@drawable/ic_baseline_post_add_24"
                    android:title="@string/create_collection" />
                <item
                    android:id="@+id/nav_create_item"
                    android:icon="@drawable/ic_baseline_dashboard_customize_24"
                    android:title="@string/create_item" />
            </group>

        </menu>

    </item>


    <item android:title="@string/other">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_faq"
                    android:icon="@drawable/ic_baseline_help_outline_24"
                    android:title="@string/faq" />
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
                    android:title="@string/about_us" />

                <item
                    android:id="@+id/nav_contact_us"
                    android:icon="@drawable/ic_baseline_call_24"
                    android:title="@string/contact_us" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>

</menu>

