<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_item"
        android:name="com.kiaan.collect_it.ui.item.ItemFragment"
        android:label="@string/menu_item"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@+id/nav_collection"
        android:name="com.kiaan.collect_it.ui.collection.CollectionFragment"
        android:label="@string/menu_collection"
        tools:layout="@layout/fragment_collection"/>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.kiaan.collect_it.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout"/>


    <fragment
        android:id="@+id/nav_home"
        android:name="com.kiaan.collect_it.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

</navigation>