<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewDateAquisition"
        android:layout_width="303dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/date_of_acquisition_optional"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemDescription" />

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="303dp"
        android:layout_height="59dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/item_name_required"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextItemDescription"
        android:layout_width="303dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/item_description_optional"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemName"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonCreateItem"
        android:layout_width="146dp"
        android:layout_height="57dp"
        android:layout_marginBottom="228dp"
        android:text="@string/collect_it"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="303dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="303dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/category_required"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateAquisition" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="spinner,textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>