<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.UpdateCollectionActivity">

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout13"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="32dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:hint="@string/collection_name">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextUpdateCollectionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="TextContrastCheck" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout14"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="32dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout13"
    android:hint="@string/description">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextUpdateCollectionDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="TextContrastCheck" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout15"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="32dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout14"
    android:hint="@string/goal">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextUpdateCollectionGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="TextContrastCheck" />
</com.google.android.material.textfield.TextInputLayout>

<Button
    android:id="@+id/buttonUpdateCollection"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="32dp"
    android:text="@string/update"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout15"
    tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>